# rfid-v2

./: .gitmodules  LICENSE.txt  README.md
code/: .gitignore  CMakeLists.txt  README.md  TODO.txt  build.sh  sdkconfig.defaults
code/components/fcch_connmgr/: CMakeLists.txt  cm.cpp  cm_admin.cpp  cm_admin.h  cm_conf.cpp  cm_dns.cpp  cm_dns.h  cm_http.cpp  cm_http.h  cm_mdns.cpp  cm_mdns.h  cm_mqtt.cpp  cm_net.cpp  cm_nvs.cpp  cm_nvs.h  cm_util.cpp  minify.sh  styles-test.html  styles.html
code/components/fcch_connmgr/include/fcch_connmgr/: cm.h  cm_conf.h  cm_mqtt.h  cm_net.h  cm_util.h
code/main/: CMakeLists.txt  app_config.h  idf_component.yml  lcd.cpp  lcd.h  main.cpp  momentary.cpp  momentary.h  mqtt.cpp  mqtt.h  relay.cpp  relay.h
mounting-boxes/: README.md
mounting-boxes/3d-printed/: power_brick_bracket.scad
mounting-boxes/all-in-one/: README.md  allinone.scad
mounting-boxes/equipment/: README.md  fob-cage.scad  mounting.scad  render-2d-1mm.lbrn2  render-2d-3mm.lbrn2  render-2d-6mm.lbrn2  render-2d.scad  render-2d.sh  render-3d.scad
pcb/: BOM.txt  README.md  fp-lib-table  rfid-v2.kicad_pcb  rfid-v2.kicad_pro  rfid-v2.kicad_sch  rfid-v2.kicad_sym  sym-lib-table
pcb/gerber-20250210/: rfid-v2-B_Cu.gbr  rfid-v2-B_Mask.gbr  rfid-v2-B_Paste.gbr  rfid-v2-B_Silkscreen.gbr  rfid-v2-Edge_Cuts.gbr  rfid-v2-F_Cu.gbr  rfid-v2-F_Mask.gbr  rfid-v2-F_Paste.gbr  rfid-v2-F_Silkscreen.gbr  rfid-v2-NPTH-drl_map.gbr  rfid-v2-NPTH.drl  rfid-v2-PTH-drl_map.gbr  rfid-v2-PTH.drl  rfid-v2-job.gbrjob
pcb/gerber-20260315/: rfid-v2-B_Cu.gbr  rfid-v2-B_Mask.gbr  rfid-v2-PTH.drl  (+11 more)
(+10 files in other folders)
